# personal-agent-node

./: .gitignore  .personal-agent-generated  AGENTS.md  CONTRIBUTING.md  DESIGN.md  README.en.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  TRADEMARKS.md  package-lock.json  package.json  tsconfig.contracts.json  tsconfig.core.json
.githooks/: pre-commit
core/desktop/src-tauri/: Cargo.toml  tauri.conf.json
core/desktop/src-tauri/icons/: icon.icns
core/desktop/src-tauri/src/: lib.rs  main.rs
docs/: final-reply-attachments.md  frontend-development-principles.md  getting-started.md  iteration-requirements-queue.md  personal-app-development.md  product-ui-design-requirements.md  projects.md  skills.md
registry/: admin-panel.json  behavior-baselines.json  capabilities.json  commands.json  connections.json  delivery.json  extensions.json  node-distribution.json  node-runtime.json  page-templates.json  product-development.json  projects.json  routes.json  setup-checks.json  site-distribution.json  skills.json
scripts/: architecture-guard.mjs  assemble-public-release-assets.mjs  build-channel-runtimes.mjs  build-desktop-shell.mjs  build-linux-install-script.mjs  build-platform-installer.mjs  build-private-site-edge-dist.mjs  build-private-site-node-dist.mjs  build-self-hosted-relay-installer.mjs  deploy-private-site-edge.sh  deploy-private-site-node.mjs  discover-projects.mjs  fetch-node-runtime.mjs  frontend-architecture-guard.mjs  generate-connection-skill.mjs  harness-lib.mjs  harness-links.mjs  install-from-github-release.mjs  install-hooks.sh  skill-guard.mjs  (+17 more)
(+954 files in other folders)
