[package]
name = "personal-agent-desktop"
version = "0.2.0-beta.39"
description = "Lightweight desktop shell for Personal Agent Node"
authors = ["Personal Agent contributors"]
license = "Apache-2.0"
repository = "https://github.com/chenchen428/personal-agent-node"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "personal_agent_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "personal-agent-ui"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "=2.6.3", features = [] }

[dependencies]
opener = { version = "=0.8.5", features = ["reveal"] }
serde_json = "=1.0.150"
tauri = { version = "=2.11.5", features = [] }
tauri-plugin-single-instance = "=2.4.3"

[profile.release]
strip = true
lto = "thin"
opt-level = "z"
codegen-units = 1
panic = "abort"
